[iOS] Tests that try to interact with the QuickType bar time out on iOS 11+ https://bugs.webkit.org/show_bug.cgi?id=188335 <rdar://problem/32542437> and <rdar://problem/32542433>

Reviewed by Tim Horton.

Tools:

Remove a UIScriptController helper method that attempted to wait for QuickType buttons to appear, and then send
touch events to the buttons. These were only used for the two tests which this patch refactors. See the
LayoutTests ChangeLog for more detail.

* DumpRenderTree/ios/UIScriptControllerIOS.mm:
(WTR::UIScriptController::selectTextCandidateAtIndex): Deleted.
* TestRunnerShared/UIScriptContext/Bindings/UIScriptController.idl:
* TestRunnerShared/UIScriptContext/UIScriptController.cpp:
(WTR::UIScriptController::selectTextCandidateAtIndex): Deleted.
(WTR::UIScriptController::waitForTextPredictionsViewAndSelectCandidateAtIndex): Deleted.
* TestRunnerShared/UIScriptContext/UIScriptController.h:
* TestRunnerShared/spi/UIKitTestSPI.h:

Remove an internal class declaration that is now unnecessary.

* WebKitTestRunner/ios/UIScriptControllerIOS.mm:
(WTR::UIScriptController::selectTextCandidateAtIndex): Deleted.
(WTR::UIScriptController::waitForTextPredictionsViewAndSelectCandidateAtIndex): Deleted.

LayoutTests:

Refactors a couple of tests that currently rely on the QuickType bar being shown when the hardware keyboard is
presented in the iOS simulator, so that it can insert text suggestions by tapping QuickType bar buttons; in the
first place, it was never guaranteed that this bar would show up, or even have more than 1 text suggestion.
Instead, we use the existing UIScriptController::applyAutocorrection method to trigger text replacement in the
same way tapping a button on the QuickType bar would replace the current word with the suggested word.

* fast/events/ios/before-input-events-prevent-candidate-insertion-expected.txt:
* fast/events/ios/before-input-events-prevent-candidate-insertion.html:
* fast/events/ios/input-events-insert-replacement-text-expected.txt:
* fast/events/ios/input-events-insert-replacement-text.html:
* platform/ios/TestExpectations:

Removes a [Timeout] expectation.

* resources/ui-helper.js:
(window.UIHelper.typeCharacter):

Add a new UIHelper method to type a character using the keyboard. Sends hardware keyboard events on the WebKit2
port of iOS, and uses EventSender elsewhere.

(window.UIHelper.applyAutocorrection):

Add a new UIHelper method that wraps UIScriptController::applyAutocorrection. Only supported in WebKit2
currently.

(window.UIHelper):


Canonical link: https://commits.webkit.org/203448@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234601 268f45cc-cd09-0410-ab3c-d52691b4dbfc