Tools/TestRunnerShared/UIScriptContext/UIScriptController.h
@@ -89,8 +89,6 @@ public:
     void keyDownUsingHardwareKeyboard(JSStringRef character, JSValueRef callback);
     void keyUpUsingHardwareKeyboard(JSStringRef character, JSValueRef callback);
 
-    void selectTextCandidateAtIndex(long index, JSValueRef callback);
-
     void keyboardAccessoryBarNext();
     void keyboardAccessoryBarPrevious();
 
@@ -207,7 +205,6 @@ private:
     JSClassRef wrapperClass() final;
 
     JSObjectRef objectFromRect(const WebCore::FloatRect&) const;
-    void waitForTextPredictionsViewAndSelectCandidateAtIndex(long index, unsigned callbackID, float interval);
 
     UIScriptContext* m_context;
 };
